[배지현] - 페이지네이션 점검 - 도서 상세 페이지 수정

--- a/src/main/resources/templates/books/product.html
+++ b/src/main/resources/templates/books/product.html
@@ -52,9 +52,10 @@
 					</div><!--  커버, 가격정보 flex -->
 					
 					
+					<!--  책정보 -->
 					
-					<div class="my-4"> <!--  책정보 -->
 						<div class=" ml-3">
+<!--					<div class="my-4"> 
 							<div>
 								작가 소개
 							</div>
@@ -66,7 +67,7 @@
 							</div>
 							<div>
 								어쩌구저쩌구 
-							</div>
+							</div> 				-->
 						</div>
 						<div class="my-4 ml-3">
 						 	<h4 class="mb-3 ">기본 정보</h4>
