[배지현] - 최소금액 설정 변경 (test용) - undefined error 찾는중 #6

--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -380,7 +380,7 @@
 				    ,merchant_uid: merchant_uid // 상점에서 관리하는 주문 번호를 전달
 				    ,name : orderName
 //				    ,amount : finalPrice + shippingFee
-				    ,amount : 100 // 최소 결제 금액 100원
+				    ,amount : 100 // 최소 결제 금액 100원 // .나중엔 삭제하고 위에꺼 써야함
 				//    ,buyer_email : 'iamport@siot.do' // 이메일 
 				    ,buyer_name : name
 				    ,buyer_tel : phone
