[배지현] - 회원가입 완료 후 alert 창 출력 #3 #7

--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -504,6 +504,7 @@
 			,success:function(response){
 	
 				if(response.result == "success"){
+					alert(name + "님, 누누북스 회원이 되신 것을 축하합니다!");
 					location.href="/nunubooks/account/login";
 				} else{
 					alert("양식을 다시 확인해 주세요")
