--- a/src/main/resources/templates/books/searchList.html
+++ b/src/main/resources/templates/books/searchList.html
@@ -5,7 +5,7 @@
      layout:decorate="~{layout/default}">
      
 
-		<section layout:fragment="contents" class="contents ">
+		<section layout:fragment="contents" class="contents container">
 		
 		<!--  리스트 테스트 후 수정예정 -->
 		
