[배지현] - 베스트셀러 selected 수정 #11 #7

--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -36,6 +36,7 @@
 			              <option value="2" th:selected="${nowWeek == 2 or week == 2}">2주</option>
 			              <option value="3" th:selected="${nowWeek == 3 or week == 3}">3주</option>
 			              <option value="4" th:selected="${nowWeek == 4 or week == 4}">4주</option>
+			              <option value="5" th:selected="${nowWeek == 5 or week == 5}">5주</option>
 			             </select>
 					 <!-- 
 						<button type="button" class="btn btn-secondary mx-1" id="weekBtn" value="week">주간</button>
