--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -74,7 +74,9 @@
 									<img th:src="${item.cover}" class="cart-book-img mx-2">
 									</div>
 									<div class="mx-3 cart-title"> <!--  책 정보 -->
-										<h5 class="font-weight-bold" th:utext="${item.title}">책 제목 어쩌구저쩌구저쩌구</h5>
+										<a th:href="|/nunubooks/product?itemId=${cartList.itemId}|" class="text-dark">
+											<h5 class="font-weight-bold cart-title-info" th:utext="${item.title}">책 제목 어쩌구저쩌구저쩌구</h5>
+										</a>
 										<div class="d-flex mt-2">
 											<div class="text-success font-weight-bold mr-2" th:text="|(${item.discount}%)|">할인율</div>
 											<del><div th:text="|${#numbers.formatInteger(item.priceStandard, 3, 'COMMA')} 원|">정가</div></del>
