--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -2,8 +2,8 @@
 			<ul class="nav nav-pills font-weight-bold">
 				<li class="nav-item mr-4 ml-2"><a class="search-icons bi bi-list font-weight-bold h4 menu-text" href="#"></a></li>
 				<li class="nav-item mr-4"><a href="/nunubooks/books?queryType=ItemNewSpecial" class="menu-text">국내도서</a></li>
-				<li class="nav-item mr-4"><a href="#" class="menu-text">해외도서</a></li>
+				<li class="nav-item mr-4"><a href="/nunubooks/books?mallType=Foreign" class="menu-text">해외도서</a></li>
 				<li class="nav-item mr-4"><a href="/nunubooks/books" class="menu-text">베스트셀러</a></li>
-				<li class="nav-item"><a href="#" class="menu-text">eBook</a></li>
+				<li class="nav-item"><a href="/nunubooks/books?mallType=eBook" class="menu-text">eBook</a></li>
 			</ul>
 		</nav>
