--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,8 +1,9 @@
-		<header>
+		<header class="mx-4">
 			<div class="mt-3 text-right d-flex justify-content-end"> <!-- 정보  관리 버튼 -->
-			<div class="mr-2" th:if="${session.userId != null }">
-				<span th:text="|${session.userName} 님 |" class="font-weight-bold">김뫄뫄님</span> 
-			<a href="/nunubooks/account/logout" class="text-dark">로그아웃</a></div>
+				<div class="mr-2" th:if="${session.userId != null }">
+					<span th:text="|${session.userName} 님 |" class="font-weight-bold">김뫄뫄님</span> 
+					<a href="/nunubooks/account/logout" class="text-dark">로그아웃</a>
+				</div>
 				<div th:unless="${session.userId != null }">
 					<a href="/nunubooks/account/login" class="text-dark mr-2">로그인</a>
 					<a href="/nunubooks/account/sign-up" class="text-dark mr-2">회원가입</a>
@@ -12,14 +13,13 @@
 					<a href="#" class="text-dark mr-4">고객센터</a>
 			</div>
 				
-			<div class="d-flex align-items-center ">
-					<div class="logo p-3 mr-4"><!-- 로고  추후 수정-->
+			<div class="d-flex align-items-center">
+					<div class="logo p-3 m-4"><!-- 로고  추후 수정-->
 						<a href="/nunubooks/main" class="logo">누누북스</a>
 					</div>
 					<!--  검색버튼 -->
 				<form action="/nunubooks/searchList" method="get">
-					<div>
-						<div class="d-flex search-bar align-items-center border border-dark rounded-pill">
+						<div class="d-flex search-bar align-items-center border border-dark rounded-pill mx-4">
 								<!-- 
 								<button type="button" class="btn border-0 m-2">
 								</button>
