--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,4 +1,4 @@
-		<nav class="menu navbar">
+		<nav class="menu navbar container">
 			<ul class="nav nav-pills font-weight-bold">
 				<li class="nav-item mr-4 ml-2"><a class="search-icons bi bi-list font-weight-bold h4 menu-text" href="#"></a></li>
 				<li class="nav-item mr-4"><a href="/nunubooks/books?queryType=ItemNewSpecial" class="menu-text">국내도서</a></li>
